<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_background"
    tools:context=".activities.Content.fragments.HomeFragment">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/dark_blue_text" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilePic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/userName"
        app:layout_constraintStart_toEndOf="@+id/backArrow"
        app:layout_constraintTop_toTopOf="@+id/greeting"
        app:shapeAppearanceOverlay="@style/RoundedImageView" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/greeting_text"
        android:textColor="@color/dark_blue_text"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/profilePic"
        app:layout_constraintTop_toTopOf="@+id/profilePic" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-bold"
        app:layout_constraintStart_toStartOf="@+id/greeting"
        app:layout_constraintTop_toBottomOf="@+id/greeting" />

    <ImageView
        android:id="@+id/notificationBell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_bell"
        app:layout_constraintBottom_toBottomOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/greeting"
        app:tint="@color/dark_blue_text" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/profilePic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/waterLevelContainer"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"> <ProgressBar
                android:id="@+id/circularProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:max="100"
                android:progress="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/percentageText"
                    android:layout_width="wrap_content"
                    android:text="@string/water_level_percentage"
                    android:textColor="@color/black_text"
                    android:textSize="48sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-bold"
                    app:layout_constraintBottom_toTopOf="@+id/waterLevelText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/waterLevelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water_level_label"
                    android:textColor="@color/grey_text"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/percentageText" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/myBoreholeTitle"
                style="@style/TextView.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/my_borehole_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/waterLevelContainer" />

            <TextView
                android:id="@+id/myBoreholeSeeAll"
                style="@style/TextView.Subheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/see_all"
                android:textColor="@color/dark_blue_text"
                app:layout_constraintBaseline_toBaselineOf="@+id/myBoreholeTitle"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/dataCard"
                android:layout_width="0dp"
                android:layout_height="190dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/card_background_light_blue"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toStartOf="@+id/myPumpCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myBoreholeTitle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/dataImage"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:src="@drawable/img"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:shapeAppearanceOverlay="@style/RoundedImageView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/dataTitle"
                        style="@style/TextView.CardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/data_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dataImage" />

                    <TextView
                        android:id="@+id/dataStatus"
                        style="@style/TextView.CardStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_status"
                        android:textColor="@color/status_green"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dataTitle" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/myPumpCard"
                android:layout_width="0dp"
                android:layout_height="190dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/card_background_light_blue"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dataCard"
                app:layout_constraintTop_toBottomOf="@+id/myBoreholeTitle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/pumpImage"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:src="@drawable/img_1"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:shapeAppearanceOverlay="@style/RoundedImageView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/pumpTitle"
                        style="@style/TextView.CardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/my_pump_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pumpImage" />

                    <TextView
                        android:id="@+id/pumpStatus"
                        style="@style/TextView.CardStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_pump_status"
                        android:textColor="@color/status_green"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pumpTitle" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/recentAlertsTitle"
                style="@style/TextView.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/recent_alerts_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dataCard" />

            <TextView
                android:id="@+id/recentAlertsSeeAll"
                style="@style/TextView.Subheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/see_all"
                android:textColor="@color/dark_blue_text"
                app:layout_constraintBaseline_toBaselineOf="@+id/recentAlertsTitle"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/alertsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/recentAlertsTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:nestedScrollingEnabled="false"
                tools:itemCount="2"
                tools:listitem="@layout/layout_alert_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>